--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,19 @@
-{}
+{
+  "hosting": {
+    "public": "dist/ang-app/browser",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
+  "database": {
+    "rules": "database.rules.json"
+  }
+}
